--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Feb 04 19:46:58 EST 2016
-sdk.dir=C\:\\Users\\Karim\\AppData\\Local\\Android\\sdk
+#Thu Feb 18 20:41:31 EST 2016
+sdk.dir=C\:\\Users\\Owner\\AppData\\Local\\Android\\sdk
