--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
-.idea/workspace.xml
+app/app.iml.gradle
+/build
+/.idea
+*.iml
+/local.properties
+.DS_Store
+.gradle
+import-summary.txt
 local.properties
-app/app.iml
