--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.teamsight.touchvision" >
+    package="com.teamsight.touchvision">
+
     <uses-permission android:name="android.permission.NFC" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
@@ -11,27 +12,33 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:name=".InitialActivity"
+            android:label="@string/title_activity_initial">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.nfc.action.TAG_DISCOVERED"/>
+                <action android:name="android.nfc.action.TAG_DISCOVERED" />
             </intent-filter>
         </activity>
-
-        <activity android:name="com.teamsight.touchvision.sistelnetworks.activities.ConnectActivity"
-            android:screenOrientation="portrait"></activity>
-        <activity android:name="com.teamsight.touchvision.sistelnetworks.activities.ReadActivity"
-            android:screenOrientation="portrait"></activity>
-        <activity android:name="com.teamsight.touchvision.sistelnetworks.activities.WriteActivity"
-            android:windowSoftInputMode="stateHidden"
-            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".sistelnetworks.activities.ConnectActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".sistelnetworks.activities.ReadActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".sistelnetworks.activities.WriteActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden" />
 
     </application>
 
