--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name="com.teamsight.touchvision.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,14 +24,6 @@
                 <action android:name="android.nfc.action.TAG_DISCOVERED"/>
             </intent-filter>
         </activity>
-
-        <activity android:name="com.teamsight.touchvision.sistelnetworks.activities.ConnectActivity"
-            android:screenOrientation="portrait"></activity>
-        <activity android:name="com.teamsight.touchvision.sistelnetworks.activities.ReadActivity"
-            android:screenOrientation="portrait"></activity>
-        <activity android:name="com.teamsight.touchvision.sistelnetworks.activities.WriteActivity"
-            android:windowSoftInputMode="stateHidden"
-            android:screenOrientation="portrait"></activity>
 
     </application>
 
