[Vwand Background Service] VWand service now runs in the background. Works for multiple reads

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
             </intent-filter>
         </activity>
 
+        <service
+            android:name="com.teamsight.touchvision.VWandReadIntentService"
+            android:exported="false"/>
+
     </application>
 
 </manifest>
