Added haptic and Auditory feedback to successful tag read

--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Mar 09 10:59:58 EST 2016
-sdk.dir=/Users/aldrichW/Downloads/Programs/adt-bundle-mac-x86_64-20130729/sdk
+#Fri Mar 25 15:33:45 EDT 2016
+sdk.dir=C\:\\Users\\Karim\\AppData\\Local\\Android\\sdk
