--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,25 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
         <activity
-            android:name="com.teamsight.touchvision.MainActivity"
+            android:name="com.teamsight.touchvision.InitialActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.teamsight.touchvision.vWandConnectActivity"
+            android:label="@string/app_name" >
+        </activity>
+
+        <activity
+            android:name="com.teamsight.touchvision.MainActivity"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.nfc.action.TAG_DISCOVERED"/>
             </intent-filter>
